--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,9 @@
     </head>
 
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello World
+        </h1>
+        <h2>Crazy
+        </h2>
     </body>
 </html>
